--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,17 +20,15 @@
 
 	<label class="sr-only">Username</label>
 	<input type="text" class="form-control"  name="username" th:placeholder="用户名：" required="" autofocus="">
-	<label class="sr-only">Password</label>
-	<input type="password" class="form-control" name="password" th:placeholder="密码：" required="">
+	<!--<label class="sr-only">Password</label>
+	<input type="password" class="form-control" name="password" th:placeholder="密码：" required="">-->
 	<div class="checkbox mb-3">
 		<label>
-			<input type="checkbox" value="remember-me" th:text="记住我">
+			<input type="hidden" value="remember-me"/>
 		</label>
 	</div>
 	<button class="btn btn-lg btn-primary btn-block" type="submit" th:text="登陆">Sign in</button>
 	<p class="mt-5 mb-3 text-muted">© 2020-2021</p>
-	<a class="btn btn-sm" th:href="@{/index.html(l='zh_CN')}">中文</a>
-	<a class="btn btn-sm" th:href="@{/index.html(l='en_US')}">English</a>
 </form>
 
 </body>
